--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+    padding: 0;
+}
 .nav {
     background-color: rgb(56, 63, 30) !important;
 }
@@ -18,19 +22,26 @@
 }
 
 .about {
+    padding: 50px;
     display: flex;
-    align-items: stretch;
+    align-items: center;
     justify-content: space-between;
     max-width: 1200px;
-    margin: auto;
-    padding: 50px 20px;
+    margin: 10px;
+    /* padding: 50px 20px; */
+    
+    gap: 60px;
+    border: 1px solid red;
+    padding-top: 50px;
 }
 
 /* Left Side (images) */
 .aboutImages {
     display: flex;
     width: 50%;
-    gap: 10px;
+    height: 500px;
+    gap: 20px;
+    border: 1px solid red;
 }
 
 .aboutImages div {
@@ -56,30 +67,41 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    text-align: left;
+    text-align: center;
     padding: 20px;
 }
 
-.aboutText h1 {
+.aboutText h3 {
     margin-bottom: 15px;
-    font-size: 2rem;
+    font-family: Bebas Neue, sans-serif;
+    font-size: 52px;
+    font-weight: 700;
+    letter-spacing: 1px;
 }
 
 .aboutText p {
+    /* margin: 0 0 10px; */
     margin-bottom: 20px;
     font-size: 1rem;
     line-height: 1.5;
+    color: gray;
+    letter-spacing: .15rem;
+    
 }
 
 .aboutBtn {
     padding: 10px 20px;
-    font-size: 1rem;
-    background-color: #ff7f50;
-    color: white;
-    border: none;
+    width: 50%;
+    margin: 10px auto auto;
+    font-size: 16px;
+    font-weight: 500;
+    background-color: #ff9f10;
+    color: #fff;
+    border: 2px solid #ff9f10;
     cursor: pointer;
     border-radius: 5px;
     transition: background 0.3s;
+    display: block;
 }
 
 .aboutBtn:hover {
