--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,17 +21,20 @@ body {
    object-fit: cover;
 }
 
+#about {
+    width: 100%;
+    padding: 50px 0;
+}
+
 .about {
     padding: 50px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     max-width: 1200px;
-    margin: 10px;
+    margin: 0 auto;
     /* padding: 50px 20px; */
-    
     gap: 60px;
-    border: 1px solid red;
     padding-top: 50px;
 }
 
