updated about section to use max width of 1400px, changed 50/50 split to 60/40 for .aboutImages and .aboutText

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,27 +24,26 @@ body {
 #about {
     width: 100%;
     padding: 50px 0;
+    
 }
 
 .about {
-    padding: 50px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    max-width: 1200px;
+    max-width: 1400px;
     margin: 0 auto;
-    /* padding: 50px 20px; */
     gap: 60px;
-    padding-top: 50px;
+    padding: 50px;
+    
 }
 
 /* Left Side (images) */
 .aboutImages {
     display: flex;
-    width: 50%;
-    height: 500px;
+    width: 60%;
+    height: 600px;
     gap: 20px;
-    border: 1px solid red;
 }
 
 .aboutImages div {
@@ -66,12 +65,14 @@ body {
 
 /* Right side (text) */
 .aboutText {
-    width: 50%;
+    width: 40%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    padding: 20px;
+    padding-left: 40px;
+    
+    
 }
 
 .aboutText h3 {
