--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,6 +24,8 @@ body {
 #about {
     width: 100%;
     padding: 50px 0;
+    margin-bottom: 10px;
+    border: 2px solid green;
     
 }
 
@@ -35,6 +37,7 @@ body {
     margin: 0 auto;
     gap: 60px;
     padding: 50px;
+    
     
 }
 
@@ -136,6 +139,10 @@ body {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    padding: 2.5rem;
+    border: 2px solid red;
+    /* display: grid;
+    margin: auto; */
 }
 
 .quotation {
@@ -151,6 +158,7 @@ body {
     font-size: 40px;
     letter-spacing: 1px;
     font-family: Bebas Neue, sans-serif;
+    margin: 20px
 }
 
 /* .quoteH3 h3 {
@@ -168,4 +176,6 @@ body {
 .quotationEnd {
     display: block;
     text-align: end;
+    margin: 0;
+    padding: 0;
 }
