--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -140,7 +140,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     padding: 2.5rem;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     /* display: grid;
     margin: auto; */
 }
