--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -25,7 +25,7 @@ body {
     width: 100%;
     padding: 50px 0;
     margin-bottom: 10px;
-    border: 2px solid green;
+    /* border: 2px solid green; */
     
 }
 
@@ -37,8 +37,6 @@ body {
     margin: 0 auto;
     gap: 60px;
     padding: 50px;
-    
-    
 }
 
 /* Left Side (images) */
@@ -178,4 +176,38 @@ body {
     text-align: end;
     margin: 0;
     padding: 0;
+}
+
+#services {
+    width: 100%;
+    padding: 50px 0;
+    margin-bottom: 10px;
+}
+
+.services {
+  display: flex;  
+  align-items: center;
+  justify-content: center;
+  max-width: 1400px;
+  margin: 0 auto;
+  gap: 60px;
+  padding: 50px;
+}
+
+.serviceImgs {
+    display: flex;
+    width: 50%;
+    height: 600px;
+    gap: 20px;
+}
+
+.serviceImgs div {
+    flex: 1;
+}
+
+.serviceImgs img {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    object-fit: cover;
 }
