--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -211,3 +211,28 @@ body {
     border-radius: 10px;
     object-fit: cover;
 }
+
+.serviceOfferings {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto auto;
+    gap: 20px;
+    width: 50%;
+    text-align: center;
+}
+
+.offering:nth-child(1) {
+    grid-column: 1 /2 ;
+    grid-row: 1 / 2;
+}
+
+.offering:nth-child(2) {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+}
+
+.offering:nth-child(3) {
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+    justify-self: center;
+}
