--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -91,7 +91,7 @@ body {
 .aboutText p {
     /* margin: 0 0 10px; */
     margin-bottom: 20px;
-    font-size: 1rem;
+    font-size: 14px;
     line-height: 1.5;
     color: gray;
     letter-spacing: .15rem;
