--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -240,3 +240,86 @@ body {
     grid-row: 2 / 3;
     justify-self: center;
 }
+
+#favorites {
+    padding: 50px;
+}
+
+.favDishes {
+    text-align: center;
+    font-size: 52px;
+    font-weight: 700;
+    font-family: Bebas Neue, sans-serif;
+    letter-spacing: 1px;
+    color: #333333;
+    margin: 20px 0 10px;
+}
+
+.favoritesContainer {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 30px;
+    padding: 40px;
+}
+.item:hover {
+    box-shadow: 0 2px 5px -1px #32325d40;
+}
+
+.item {
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 45%;
+    max-width: 45%;
+    display: flex;
+    gap: 20px;
+    justify-content: end;
+    align-items: center;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 1px 4px #00000029;
+}
+
+.img {
+    width: 15%;
+}
+
+.img img {
+    width: 100%;
+    height: 5rem;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.itemName {
+    width: 85%;
+    display: grid;
+    align-items: center;
+}
+
+.itemName div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+}
+
+.itemName div h3 {
+    color: #000;
+    font-size: 20px;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin: 0;
+}
+
+.itemName div span {
+    color: #000;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.itemName p {
+    font-size: 14px;
+    color: #444343;
+    margin: 0;
+}
