--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,10 +4,40 @@ body {
 }
 .nav {
     background-color: rgb(56, 63, 30) !important;
+    font-family: Poppins, sans-serif;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px 20px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 99;
+
 }
+
+/* .container-fluid {
+    font-family: Poppins, sans-serif;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px 20px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 99;
+} */
+
+/* #navbarNav .navbar-nav {
+    display: flex;
+    justify-content: space-between;
+    gap: 15px;
+    align-items: center;
+} */
 
 .listLinks a {
     color: white !important;
+    font-size: 16px;
 }
 
 .navbar-brand img {
@@ -26,14 +56,19 @@ body {
 }
 
 #about {
-    width: 100%;
-    padding: 50px 0;
-    margin-bottom: 10px;
+    /* width: 100%; */
+    /* padding: 50px 0; */
+    /* margin-bottom: 10px; */
     /* border: 2px solid green; */
     
+    padding: 5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 40px;
 }
 
-.about {
+/* .about {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -41,23 +76,28 @@ body {
     margin: 0 auto;
     gap: 60px;
     padding: 50px;
-}
+} */
 
 /* Left Side (images) */
 .aboutImages {
+    /* display: flex; */
+    /* width: 60%; */
+    /* height: 600px; */
+    /* gap: 20px; */
+
     display: flex;
-    width: 60%;
-    height: 600px;
+    width: 50%;
+    justify-content: space-between;
     gap: 20px;
 }
 
-.aboutImages div {
+/* .aboutImages div {
     flex: 1;
-}
+} */
 
 .aboutImages img {
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: auto;
     border-radius: 10px;
     object-fit: cover;
 }
@@ -70,47 +110,56 @@ body {
 
 /* Right side (text) */
 .aboutText {
-    width: 40%;
+    /* width: 40%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    padding-left: 40px;
+    padding-left: 40px; */
     
-    
+    width: 50%;
+    text-align: center;
+    margin: auto;
 }
 
 .aboutText h3 {
-    margin-bottom: 15px;
+    /* margin-bottom: 15px;
     font-family: Bebas Neue, sans-serif;
     font-size: 52px;
     font-weight: 700;
+    letter-spacing: 1px; */
+    font-size: 52px;
+    font-weight: 700;
+    font-family: Bebas Neue, sans-serif;
     letter-spacing: 1px;
 }
 
 .aboutText p {
     /* margin: 0 0 10px; */
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     font-size: 14px;
     line-height: 1.5;
     color: gray;
     letter-spacing: .15rem;
     
+    
+    
 }
 
 .aboutBtn {
     padding: 10px 20px;
-    width: 50%;
     margin: 10px auto auto;
     font-size: 16px;
     font-weight: 500;
     background-color: #ff9f10;
     color: #fff;
     border: 2px solid #ff9f10;
+    
+    /* width: 50%; */
     cursor: pointer;
     border-radius: 5px;
     transition: background 0.3s;
-    display: block;
+    /* display: block; */
 }
 
 .aboutBtn:hover {
