--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,7 +4,7 @@ body {
 }
 .nav {
     background-color: rgb(56, 63, 30) !important;
-    font-family: Poppins, sans-serif;
+    font-family: "Poppins", sans-serif;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -35,15 +35,36 @@ body {
     align-items: center;
 } */
 
-.listLinks a {
-    color: white !important;
-    font-size: 16px;
-}
+
 
 .navbar-brand img {
     width: 100px;
     height: auto;
 }
+
+.navbar-nav {
+    display: flex;
+    justify-content: space-between;
+    gap: 15px;
+    align-items: center;
+}
+
+.active {
+    color: rgb(255, 255, 255);
+    font-size: 16px;
+    letter-spacing: 2px;
+    text-align: center;
+    font-weight: 700 !important;
+}
+
+.listLinks a {
+    color: white !important;
+    font-size: 16px;
+    font-weight: 400;
+    letter-spacing: 2px;
+    text-align: center;
+}
+
 
 .carousel-item {
     transition: transform 2.5s ease-in-out
@@ -130,7 +151,7 @@ body {
     letter-spacing: 1px; */
     font-size: 52px;
     font-weight: 700;
-    font-family: Bebas Neue, sans-serif;
+    font-family: "Bebas Neue", sans-serif;
     letter-spacing: 1px;
 }
 
@@ -210,7 +231,7 @@ body {
     text-transform: uppercase !important;
     font-size: 40px;
     letter-spacing: 1px;
-    font-family: Bebas Neue, sans-serif;
+    font-family: "Bebas Neue", sans-serif;
     /* margin: 20px */
 }
 
@@ -222,7 +243,7 @@ body {
     text-align: center;
     color: #0c0c0c;
     font-size: 30px;
-    font-family: Bebas Neue, sans-serif;
+    font-family: "Bebas Neue", sans-serif;
     letter-spacing: 1px;
 }
 
@@ -304,7 +325,7 @@ body {
     text-align: center;
     font-size: 52px;
     font-weight: 700;
-    font-family: Bebas Neue, sans-serif;
+    font-family: "Bebas Neue", sans-serif;
     letter-spacing: 1px;
     color: #333333;
     margin: 20px 0 10px;
