--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -160,6 +160,7 @@ html, body {
     .aboutImages img {
         width: 90%;
         max-width: 300px;
+        
     }
     .aboutText {
         width: 100%;
@@ -183,16 +184,26 @@ html, body {
 
 /* Responsive Design */
 @media (max-width: 768px) {
-    .about {
+    #about {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 20px;
+        gap: 20px;
+    }
+    /* .about {
         flex-direction: column;
         text-align: center;
-    }
+    } */
     .aboutImages {
         width: 100%;
-        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
+        /* justify-content: center; */
     }
     .aboutImages img {
-        width: 45%;
+        width: 80%;
     }
     .aboutText {
         width: 100%;
@@ -298,6 +309,42 @@ html, body {
     grid-column: 1 / 3;
     grid-row: 2 / 3;
     justify-self: center;
+}
+
+@media (max-width: 575px) {
+    #services {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 20px;
+        gap: 20px;
+    }
+    .serviceImgs {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
+    }
+    .serviceImgs img {
+        width: 90%;
+        max-width: 300px;
+    }
+}
+
+@media (max-width: 768px) {
+    #services {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 20px;
+        gap: 20px;
+    }
+    .serviceImgs {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
+    }
 }
 
 #favorites {
