--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -253,12 +253,17 @@ html, body {
 }
 
 #services {
-    width: 100%;
-    padding: 50px 0;
-    margin-bottom: 10px;
+    /* width: 100%; */
+    /* padding: 50px 0; */
+    /* margin-bottom: 10px; */
+    padding: 2.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 40px;
 }
 
-.services {
+/* .services {
   display: flex;  
   align-items: center;
   justify-content: center;
@@ -266,22 +271,23 @@ html, body {
   margin: 0 auto;
   gap: 60px;
   padding: 50px;
-}
+} */
 
 .serviceImgs {
     display: flex;
     width: 50%;
-    height: 600px;
+    /* height: 600px; */
+    justify-content: space-between;
     gap: 20px;
 }
 
-.serviceImgs div {
+/* .serviceImgs div {
     flex: 1;
-}
+} */
 
 .serviceImgs img {
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: auto;
     border-radius: 10px;
     object-fit: cover;
 }
@@ -293,6 +299,8 @@ html, body {
     gap: 20px;
     width: 50%;
     text-align: center;
+    height: auto;
+    margin: auto;
 }
 
 .offering:nth-child(1) {
@@ -331,7 +339,7 @@ html, body {
     }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 576px) and (max-width: 767px) {
     #services {
         flex-direction: column;
         align-items: center;
@@ -344,6 +352,13 @@ html, body {
         flex-direction: column;
         align-items: center;
         gap: 15px;
+    }
+    .serviceImgs img {
+        width: 80%;
+        /* max-width: 300px; */
+    }
+    .serviceOfferings {
+        padding-top: 40px;
     }
 }
 
