--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,11 +2,6 @@ html, body {
     width: 100vw;
     overflow-x: hidden;
 }
-/* body {
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
-} */
 
 .nav {
     background-color: rgb(56, 63, 30) !important;
@@ -74,11 +69,6 @@ html, body {
    height: 70vh;
    object-fit: cover;
 }
-@media (max-width: 575px) {
-    .carouselPic {
-        height: 200px;
-    }
-}
 
 #about {
     padding: 2.5rem;
@@ -143,74 +133,9 @@ html, body {
     background-color: #e76e3d;
 }
 
-@media (max-width: 575px) {
-    #about {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        padding: 20px;
-        gap: 20px;
-    }
-    .aboutImages {
-        width: 100%;
-        flex-direction: column;
-        align-items: center;
-        gap: 15px;
-    }
-    .aboutImages img {
-        width: 90%;
-        max-width: 300px;
-        
-    }
-    .aboutText {
-        width: 100%;
-        text-align: center;
-        padding: 10px;
-    }
-    .aboutText h3 {
-        font-size: 36px;
-    }
-    .aboutText p {
-        font-size: 14px;
-        line-height: 1.5;
-        padding: 0 10px;
-    }
-    .aboutBtn {
-        width: 80%;
-        padding: 12px;
-        font-size: 16px;
-    }
-}
 
-/* Responsive Design */
-@media (max-width: 768px) {
-    #about {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        padding: 20px;
-        gap: 20px;
-    }
-    /* .about {
-        flex-direction: column;
-        text-align: center;
-    } */
-    .aboutImages {
-        width: 100%;
-        flex-direction: column;
-        align-items: center;
-        gap: 15px;
-        /* justify-content: center; */
-    }
-    .aboutImages img {
-        width: 80%;
-    }
-    .aboutText {
-        width: 100%;
-        text-align: center;
-        padding: 20px;
-    }
-}
+
+
 
 
 #quote {
@@ -317,49 +242,6 @@ html, body {
     grid-column: 1 / 3;
     grid-row: 2 / 3;
     justify-self: center;
-}
-
-@media (max-width: 575px) {
-    #services {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        padding: 20px;
-        gap: 20px;
-    }
-    .serviceImgs {
-        width: 100%;
-        flex-direction: column;
-        align-items: center;
-        gap: 15px;
-    }
-    .serviceImgs img {
-        width: 90%;
-        max-width: 300px;
-    }
-}
-
-@media (min-width: 576px) and (max-width: 767px) {
-    #services {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        padding: 20px;
-        gap: 20px;
-    }
-    .serviceImgs {
-        width: 100%;
-        flex-direction: column;
-        align-items: center;
-        gap: 15px;
-    }
-    .serviceImgs img {
-        width: 80%;
-        /* max-width: 300px; */
-    }
-    .serviceOfferings {
-        padding-top: 40px;
-    }
 }
 
 #favorites {
@@ -510,3 +392,144 @@ html, body {
     margin: 0;
 }
 
+/* ============================
+/* Responsive Design */
+
+@media (max-width: 575px) {
+    .carouselPic {
+        height: 200px;
+    }
+    #about {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 20px;
+        gap: 20px;
+    }
+    .aboutImages {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
+    }
+    .aboutImages img {
+        width: 90%;
+        max-width: 300px;
+        
+    }
+    .aboutText {
+        width: 100%;
+        text-align: center;
+        padding: 10px;
+    }
+    .aboutText h3 {
+        font-size: 36px;
+    }
+    .aboutText p {
+        font-size: 14px;
+        line-height: 1.5;
+        padding: 0 10px;
+    }
+    .aboutBtn {
+        width: 80%;
+        padding: 12px;
+        font-size: 16px;
+    }
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    #about {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 20px;
+        gap: 20px;
+    }
+   
+    .aboutImages {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
+    }
+    .aboutImages img {
+        width: 80%;
+    }
+    .aboutText {
+        width: 100%;
+        text-align: center;
+        padding: 20px;
+    }
+
+    .favoritesContainer {
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+    .item {
+        flex-basis: 100%;
+        max-width: 100%;
+        justify-content: space-between;
+        width: 90%;
+    }
+    .img {
+        width: 25%;
+    }
+    .img img {
+        height: 6rem;
+    }
+
+    .itemName {
+        width: 80%;
+        text-align: center;
+    }
+    /* .itemName div {
+        justify-content: space-between;
+    } */
+
+
+}
+
+@media (min-width: 576px) and (max-width: 767px) {
+    #services {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 20px;
+        gap: 20px;
+    }
+    .serviceImgs {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
+    }
+    .serviceImgs img {
+        width: 80%;
+        /* max-width: 300px; */
+    }
+    .serviceOfferings {
+        padding-top: 40px;
+    }
+}
+
+@media (max-width: 575px) {
+    #services {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 20px;
+        gap: 20px;
+    }
+    .serviceImgs {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
+    }
+    .serviceImgs img {
+        width: 90%;
+        max-width: 300px;
+    }
+}
