--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -178,9 +178,6 @@ html, body {
 }
 
 #services {
-    /* width: 100%; */
-    /* padding: 50px 0; */
-    /* margin-bottom: 10px; */
     padding: 2.5rem;
     display: flex;
     align-items: center;
@@ -188,27 +185,12 @@ html, body {
     gap: 40px;
 }
 
-/* .services {
-  display: flex;  
-  align-items: center;
-  justify-content: center;
-  max-width: 1400px;
-  margin: 0 auto;
-  gap: 60px;
-  padding: 50px;
-} */
-
 .serviceImgs {
     display: flex;
     width: 50%;
-    /* height: 600px; */
     justify-content: space-between;
     gap: 20px;
 }
-
-/* .serviceImgs div {
-    flex: 1;
-} */
 
 .serviceImgs img {
     width: 50%;
@@ -460,6 +442,65 @@ html, body {
         width: 100%;
         text-align: center;
         padding: 20px;
+    }
+    #services {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 20px;
+        gap: 20px;
+    }
+
+    .serviceImgs {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
+    }
+    .serviceImgs img {
+        width: 90%;
+        max-width: 300px;
+    }
+    .serviceOfferings {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto autoc;
+        gap: 10px;
+        width: 90%;
+        max-width: 400px;
+        margin: auto;
+    }
+    .offering {
+        background: white;
+        padding: 15px;
+        border-radius: 10px;
+        box-shadow: 0 1px 4px #00000029;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .offering img {
+        width: 50px;
+        height: 50px;
+    }
+    .offering h3 {
+        font-size: 18px;
+        font-weight: 600;
+        margin: 10px 0;
+    }
+    .offering:nth-child(1) {
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+    }
+    .offering:nth-child(2) {
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+    }
+    .offering:nth-child(3) {
+        grid-column: 1 / 3;
+        grid-row: 2 / 3;
+        justify-self: center;
+        width: 80%;
     }
 
     .favoritesContainer {
