adjusted .quotationEnd for #quote section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -175,6 +175,9 @@ html, body {
     font-size: 180px;
     height: 125px;
     text-align: end;
+    position: relative;
+    top: -30px;
+    margin-top: -80px;
 }
 
 #services {
