--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -133,11 +133,6 @@ html, body {
     background-color: #e76e3d;
 }
 
-
-
-
-
-
 #quote {
     background-position: center center;
     background-repeat: no-repeat;
@@ -600,5 +595,14 @@ html, body {
     .serviceImgs img {
         width: 90%;
         max-width: 300px;
+    }
+}
+
+@media (max-width: 430px) {
+    .quotationEnd {
+        top: 0;
+        /* margin-top: 20px; */
+        /* text-align: center; */
+        /* display: block; */
     }
 }
