--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -599,6 +599,15 @@ html, body {
 }
 
 @media (max-width: 430px) {
+    .quotation {
+        /* top: 0;
+        margin-top: 20px;
+        display: block; */
+        /* margin-top: -30px; */
+        position: relative;
+        top: -20px;
+        left: -20px;
+    }
     .quotationEnd {
         top: 0;
         /* margin-top: 20px; */
