--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -641,3 +641,31 @@ html, body {
         /* display: block; */
     }
 }
+
+/* Menu page */
+.menu {
+    width: 100%;
+    max-width: 100vw;
+    overflow: hidden;
+}
+
+.mainImg img {
+    width: 100%;
+    height: 70vh;
+    object-fit: cover;
+}
+
+.mainText {
+    top: 250px;
+    position: absolute;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+}
+
+.mainText h3 {
+    color: #fff;
+    font-size: 70px;
+    font-family: "Bebas Neue", sans-serif;
+}
