finished updating pics for chicken section, added footer to menu.html, changed .logo in footer to .logoFooter due to duplicated names, then updated necessary styles accordingly

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -316,13 +316,13 @@ html, body {
     background-color: rgb(56, 63, 30);
 }
 
-.logo {
+.footerLogo {
     width: 33%;
     display: grid;
     gap: 20px;
 }
 
-.logo img {
+.footerLogo img {
     width: 90px;
     margin: auto;
 }
@@ -559,7 +559,7 @@ html, body {
         padding: 2rem 1rem;
         gap: 30px;
     }
-    .logo {
+    .footerLogo {
         width: 100%;
     }
     .socials {
