--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -751,7 +751,7 @@ html, body {
 
 .inner-wrapper {
     overflow: hidden;
-    max-height: 0;
+    max-height: none;
     transition: max-height 0.3s ease-out;
 }
 .inner-container {
