--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -810,3 +810,76 @@ html, body {
 .menuSections {
     scroll-margin-top: 120px;
 }
+
+/* Contact Us page */
+#form {
+    display: grid;
+    gap: 20px;
+    margin: auto;
+    max-width: 60%;
+    box-shadow: 0 3px 9px #c8d1e240;
+    padding: 10rem;
+}
+
+#form h3 {
+    font-size: 36px;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-family: 'Bebas Neue', sans-serif;
+    letter-spacing: 1px;
+}
+.contactForm {
+    display: grid;
+    gap: 20px;
+}
+
+.containerForm {
+    display: flex;
+    gap: 20px;
+}
+
+.firstName {
+    width: 50%;
+    border: 1px solid #3d464d85;
+    border-radius: 3px;
+    padding: 10px;
+}
+
+.lastName {
+    width: 50%;
+    border: 1px solid #3d464d85;
+    border-radius: 3px;
+    padding: 10px;
+}
+
+.businessName {
+    border: 1px solid #3d464d85;
+    border-radius: 3px;
+    padding: 10px;
+}
+
+.phone {
+    border: 1px solid #3d464d85;
+    border-radius: 3px;
+    padding: 10px;
+}
+
+.email {
+    border: 1px solid #3d464d85;
+    border-radius: 3px;
+    padding: 10px;
+}
+
+.btn {
+    opacity: .6;
+    background-color: #ff9f10;
+    font-size: 16px;
+    font-weight: 800;
+    color: #fff;
+    text-transform: uppercase;
+    border: 2px solid #ff9f10;
+    padding: 15px 80px;
+    margin: auto;
+    cursor: default !important;
+}
