--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1006,3 +1006,41 @@ html, body {
 .mapArea {
     text-align: center;
 }
+@media (max-width: 768px) {
+    #form {
+        max-width: 90%;
+        padding: 2rem;
+        text-align: center;
+    }
+    #form h3 {
+        font-size: 28px;
+        text-align: center;
+        display: block;
+        margin-bottom: 10px;
+    }
+    .containerForm {
+        flex-direction: column;
+        gap: 10px;
+    }
+    .firstName, .lastName {
+        width: 100%;
+    }
+    .contactUs {
+        padding: 3rem;
+    }
+    .map {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+    .map a {
+        width: 100%;
+    }
+    .btn {
+        width: 100%;
+        text-align: center;
+    }
+    .mapContainer iframe {
+        height: 300px;
+    }
+}
