--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -567,10 +567,12 @@ html, body {
         flex-wrap: wrap;
     }
     .contact {
-        /* width: 100%;
-        text-align: center; */
-        width: 33%;
-        display: grid;
+        width: 100%;
+        text-align: center;
+        /* width: 33%; */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         gap: 20px;
     }
     .contact a {
@@ -580,6 +582,7 @@ html, body {
         align-items: center;
         gap: 15px;
         text-decoration: none;
+        justify-content: center;
     }
     
     .contact svg {
