--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -584,12 +584,15 @@ html, body {
         text-decoration: none;
         justify-content: center;
     }
-    
+    .contact a:first-child {
+        gap: 5px;
+    }
     .contact svg {
         width: 40px;
         height: 40px;
         flex-shrink: 0;
     }
+ 
     .closingLiner {
         flex-direction: column;
         text-align: center;
