--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -175,51 +175,52 @@ html, body {
 }
 
 #services {
-    padding: 2.5rem;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    align-items: stretch;
     gap: 40px;
+    padding: 2.5rem;
 }
 
 .serviceImgs {
     display: flex;
+    flex-direction: row;
     width: 50%;
-    justify-content: space-between;
     gap: 20px;
+    align-items: stretch;
 }
 
 .serviceImgs img {
+    flex: 1;
+    /* min-height: 0; */
     width: 50%;
-    height: auto;
-    border-radius: 10px;
+    /* max-width: 350px; */
+    /* margin: 100%; */
+    height: 100%;
     object-fit: cover;
+    border-radius: 10px;
+    max-width: none;
 }
 
 .serviceOfferings {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    /* grid-template-rows: auto auto; */
     gap: 20px;
     width: 50%;
+
     text-align: center;
-    /* height: auto; */
-    margin: auto;
+    margin: 0;
 }
 
 .offering:nth-child(1) {
     grid-column: 1 /2 ;
-    /* grid-row: 1 / 2; */
 }
 
 .offering:nth-child(2) {
     grid-column: 2 / 3;
-    /* grid-row: 1 / 2; */
 }
 
 .offering:nth-child(3) {
     grid-column: 1 / 3;
-    /* grid-row: 2 / 3; */
     justify-self: center;
 }
 
